fix aucdes button mobile

--- a/sass/propstore/_propstoreauction.scss
+++ b/sass/propstore/_propstoreauction.scss
@@ -182,7 +182,7 @@ $imgSizeM: 320px;
 		}
 	
 		.aucdes {
-			padding: 2em;
+			padding: 2em 1em;
 			align-items: center;
 			text-align: center;
 		}
